[project]
name = "pi-coding-trace-sanitizer"
version = "0.1.0"
description = "Local PII/sensitive data sanitizer for pi coding agent session traces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.91.0",
    "click>=8.0",
    "huggingface-hub>=1.9.2",
    "inspect-ai>=0.3.205",
    "inspect-evals>=0.7.0",
    "mlx-lm>=0.31.2",
    "openai>=2.30.0",
    "rich>=14.3.3",
    "vllm-mlx>=0.2.7",
]

[project.scripts]
pi-trace-sanitizer = "pi_trace_sanitizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_trace_sanitizer"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
